[package]
name = "runtime-viewer"
authors = ["Acala Developers"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-api = { version = "21.0.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "12.0.0", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "substrate-wasm-builder",
]
